@@ -8,16 +8,19 @@ import org.kosa.congmouse.nyanggoon.dto.ExplorationDetailDto;
 import org.kosa.congmouse.nyanggoon.dto.ExplorationUpdateDto;
 import org.kosa.congmouse.nyanggoon.entity.Exploration;
 import org.kosa.congmouse.nyanggoon.entity.ExplorationBookmark;
+import org.kosa.congmouse.nyanggoon.entity.ExplorationPhoto;
 import org.kosa.congmouse.nyanggoon.entity.Member;
-import org.kosa.congmouse.nyanggoon.repository.ExplorationBookmarkRepository;
-import org.kosa.congmouse.nyanggoon.repository.ExplorationCommentRepository;
-import org.kosa.congmouse.nyanggoon.repository.ExplorationRepository;
-import org.kosa.congmouse.nyanggoon.repository.MemberRepository;
+import org.kosa.congmouse.nyanggoon.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.File;
+import java.io.IOException;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,20 +32,65 @@ public class ExplorationService {
     private final MemberRepository memberRepository;
     private final ExplorationBookmarkRepository explorationBookmarkRepository;
     private final ExplorationCommentRepository explorationCommentRepository;
+    private final ExplorationPhotoRepository explorationPhotoRepository;
+
+    @Value("${exploration.img.path}")
+    private String uploadDirPath;
 
     @Transactional
-    public Exploration createExploration(ExplorationCreateDto explorationCreateDto){
-        Exploration exploration = Exploration
-                .builder()
+    public ExplorationDetailDto createExploration(ExplorationCreateDto explorationCreateDto, List<MultipartFile> imageFileList) throws IOException {
+
+        // Exploration 게시물 저장
+        File uploadDir = new File(uploadDirPath);
+        if(!uploadDir.exists()){
+           uploadDir.mkdirs();
+        }
+
+        Exploration exploration = Exploration.builder()
                 .title(explorationCreateDto.getTitle())
                 .content(explorationCreateDto.getContent())
                 .relatedHeritage(explorationCreateDto.getRelatedHeritage())
-                .member(memberRepository
-                        .findById(explorationCreateDto.getMemberId())
-                        .orElseThrow(()->new RuntimeException("회원이 존재하지 않습니다!")))
+                .member(Member.builder()
+                        .id(explorationCreateDto.getMemberId())
+                        .build())
                 .build();
-        explorationRepository.save(exploration);
-        return exploration;
+        Exploration resultExploration = explorationRepository.save(exploration);
+
+        // 1. 문화재 탐방기 이미지 파일 저장
+        for(MultipartFile imageFile : imageFileList) {
+            String originalFileName = imageFile.getOriginalFilename();
+            String storedFileName = createStoredFileName(originalFileName);
+            String filePath = uploadDirPath + storedFileName;
+            // 실제 파일 저장
+            imageFile.transferTo(new File(filePath));
+
+        // 2. 문화재 탐방기 이미지 DB 저장
+            ExplorationPhoto explorationPhoto = ExplorationPhoto.builder()
+                    .originalName(originalFileName)
+                    .savedName(storedFileName)
+                    .fileExtension(getFileExt(originalFileName))
+                    .path(filePath)
+                    .size(imageFile.getSize())
+                    .build();
+            exploration.addPhoto(explorationPhoto);
+            explorationPhotoRepository.save(explorationPhoto);
+        }
+
+        List<ExplorationPhoto> resultExplorationPhotoList = explorationPhotoRepository.findByExplorationId(resultExploration.getId());
+        List<String> resultExplorationPhotoPathList = resultExplorationPhotoList.stream().map(ExplorationPhoto::getPath).toList();
+        return ExplorationDetailDto.from(resultExploration);
+
+    }
+
+    // UUID와 확장자를 포함한 파일 이름 생성 메서드
+    private String createStoredFileName(String originalFileName) {
+        String uuid = UUID.randomUUID().toString();
+        return uuid + "." + getFileExt(originalFileName);
+    }
+
+    private String getFileExt(String originalFileName){
+        String ext = originalFileName.substring(originalFileName.lastIndexOf(".") + 1);
+        return ext;
     }
 
     public ExplorationDetailDto viewExploration(Long id) {
@@ -77,14 +125,8 @@ public class ExplorationService {
     }
 
     public List<ExplorationDetailDto> getExplorationList() {
-        List<Exploration> explorationList = explorationRepository.findAll();
-        List<ExplorationDetailDto> explorationDetailDtoList = explorationList.stream()
-                .map(ExplorationDetailDto::from)
-                .peek(explorationDetailDto -> explorationDetailDto.setBookmarkCount(explorationBookmarkRepository.countByExplorationId(explorationDetailDto.getId())))
-                .peek(explorationDetailDto -> explorationDetailDto.setCommentCount(explorationCommentRepository.countByExplorationId(explorationDetailDto.getId())))
-                .collect(Collectors.toList());
-        log.debug("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~");
-        log.debug("{}", explorationDetailDtoList.get(0));
+        List<Exploration> explorationList = explorationRepository.findAllWithExplorationPhotos();
+        List<ExplorationDetailDto> explorationDetailDtoList = explorationList.stream().map(ExplorationDetailDto::from).toList();
         return explorationDetailDtoList;
     }
 
